attempt to avoid auto-zoom on ios

--- a/src/css/Families.scss
+++ b/src/css/Families.scss
@@ -13,6 +13,7 @@
 .search-families--component {
   .search {
     margin-top: 60px;
+    font-size: 16px;
   }
 
   .families--component {
